--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,13 +8,13 @@ title = "Léopold Trémant"
 
 [params]
   dateFormat = "2 January 2006"
-
   # mainSections = ["section1", "section2"]
   # description = "My awesome website"
 
 [params.author]
   name = "Léopold Trémant"
   image = "img/author.jpg"
+  imageAlt = "Drawing of myself by the wonderful Marie Morin (Instagram @marmo.graphics)"
   headline = "Post-doc at Inria in Strasbourg"
   bio = "Post-doc at Inria in Strasbourg"
   links = [
