--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,8 +15,8 @@ title = "Léopold Trémant"
   name = "Léopold Trémant"
   image = "img/author.jpg"
   imageAlt = "Drawing of myself by the wonderful Marie Morin (Instagram @marmo.graphics)"
-  headline = "Post-doc at Inria in Strasbourg"
-  bio = "Post-doc at Inria in Strasbourg"
+  headline = "Teaching assistant at IUT de Lens"
+  bio = "Teaching assistant at IUT de Lens"
   links = [
   #   { email = "mailto:hello@your_domain.com" },
   #   { link = "https://link-to-some-website.com/" },
