--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,8 +8,10 @@ baseURL = "https://tremelow.github.io/"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
-paginate = 10
 summaryLength = 0
+
+[pagination]
+  pagerSize = 10
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
